--- a/Droid/Resources/layout/LoginActivity.axml
+++ b/Droid/Resources/layout/LoginActivity.axml
@@ -5,115 +5,127 @@
     android:layout_height="match_parent"
     android:minWidth="25px"
     android:minHeight="25px">
-    <LinearLayout
-        android:orientation="vertical"
+    <RelativeLayout
+        android:minWidth="25px"
+        android:minHeight="25px"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/linearLayout1">
+        android:id="@+id/relativeLayout1">
+        <TextureView
+            android:id="@+id/textureCamera"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:nestedScrollingEnabled="false" />
         <LinearLayout
             android:orientation="vertical"
-            android:minWidth="25px"
-            android:minHeight="25px"
+            android:id="@+id/linearLayout1"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/linearLayout3">
+            android:layout_height="match_parent">
             <LinearLayout
                 android:orientation="vertical"
                 android:minWidth="25px"
                 android:minHeight="25px"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:id="@+id/linearLayout4"
-                android:layout_weight="2"
-                android:gravity="center">
-                <ImageView
-                    android:src="@drawable/icon_logo"
+                android:layout_height="match_parent"
+                android:id="@+id/linearLayout3">
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:minWidth="25px"
+                    android:minHeight="25px"
                     android:layout_width="match_parent"
-                    android:layout_height="120dp"
-                    android:id="@+id/imageView2" />
-            </LinearLayout>
-            <LinearLayout
-                android:orientation="horizontal"
-                android:minWidth="25px"
-                android:minHeight="25px"
-                android:layout_width="match_parent"
-                android:layout_height="55dp"
-                android:id="@+id/linearLayout5">
+                    android:layout_height="0dp"
+                    android:id="@+id/linearLayout4"
+                    android:layout_weight="2"
+                    android:gravity="center">
+                    <ImageView
+                        android:src="@drawable/icon_logo"
+                        android:layout_width="match_parent"
+                        android:layout_height="120dp"
+                        android:id="@+id/imageView2" />
+                </LinearLayout>
                 <LinearLayout
                     android:orientation="horizontal"
+                    android:minWidth="25px"
+                    android:minHeight="25px"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:id="@+id/ActionLoginUsingFacebook"
-                    android:layout_marginLeft="40dp"
-                    android:layout_marginRight="40dp"
-                    android:background="@drawable/bg_blue"
-                    android:gravity="center_vertical">
-                    <ImageView
-                        android:src="@drawable/icon_symbol_fb"
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:id="@+id/imageView1"
-                        android:layout_marginLeft="10dp" />
-                    <TextView
-                        android:text="Facebook sign in"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/textView2"
-                        android:layout_weight="1"
-                        android:gravity="center_horizontal"
-                        android:textColor="#ffffffff"
-                        android:textSize="15dp"
-                        android:layout_marginLeft="-30dp" />
+                    android:layout_height="55dp"
+                    android:id="@+id/linearLayout5">
+                    <LinearLayout
+                        android:orientation="horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:id="@+id/ActionLoginUsingFacebook"
+                        android:layout_marginLeft="40dp"
+                        android:layout_marginRight="40dp"
+                        android:background="@drawable/bg_blue"
+                        android:gravity="center_vertical">
+                        <ImageView
+                            android:src="@drawable/icon_symbol_fb"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:id="@+id/imageView1"
+                            android:layout_marginLeft="10dp" />
+                        <TextView
+                            android:text="Facebook sign in"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/textView2"
+                            android:layout_weight="1"
+                            android:gravity="center_horizontal"
+                            android:textColor="#ffffffff"
+                            android:textSize="15dp"
+                            android:layout_marginLeft="-30dp" />
+                    </LinearLayout>
                 </LinearLayout>
-            </LinearLayout>
-            <LinearLayout
-                android:orientation="vertical"
-                android:minWidth="25px"
-                android:minHeight="25px"
-                android:layout_width="match_parent"
-                android:layout_height="20dp"
-                android:id="@+id/linearLayout6" />
-            <LinearLayout
-                android:orientation="vertical"
-                android:minWidth="25px"
-                android:minHeight="25px"
-                android:layout_width="match_parent"
-                android:layout_height="55dp"
-                android:id="@+id/linearLayout7">
                 <LinearLayout
-                    android:orientation="horizontal"
-                    android:id="@+id/ActionLoginAnonymously"
-                    android:background="@drawable/bg_btn_white"
-                    android:gravity="center_vertical"
+                    android:orientation="vertical"
+                    android:minWidth="25px"
+                    android:minHeight="25px"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="40dp"
-                    android:layout_marginRight="40dp">
-                    <ImageView
-                        android:src="@drawable/icon_symbol_ano"
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:id="@+id/imageView1"
-                        android:layout_marginLeft="10dp" />
-                    <TextView
-                        android:text="Sign in anonymously"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/textView2"
-                        android:layout_weight="1"
-                        android:gravity="center_horizontal"
-                        android:textSize="15dp"
-                        android:layout_marginLeft="-30dp" />
+                    android:layout_height="20dp"
+                    android:id="@+id/linearLayout6" />
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:minWidth="25px"
+                    android:minHeight="25px"
+                    android:layout_width="match_parent"
+                    android:layout_height="55dp"
+                    android:id="@+id/linearLayout7">
+                    <LinearLayout
+                        android:orientation="horizontal"
+                        android:id="@+id/ActionLoginAnonymously"
+                        android:background="@drawable/bg_btn_white"
+                        android:gravity="center_vertical"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginLeft="40dp"
+                        android:layout_marginRight="40dp">
+                        <ImageView
+                            android:src="@drawable/icon_symbol_ano"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:id="@+id/imageView1"
+                            android:layout_marginLeft="10dp" />
+                        <TextView
+                            android:text="Sign in anonymously"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/textView2"
+                            android:layout_weight="1"
+                            android:gravity="center_horizontal"
+                            android:textSize="15dp"
+                            android:layout_marginLeft="-30dp" />
+                    </LinearLayout>
                 </LinearLayout>
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:minWidth="25px"
+                    android:minHeight="25px"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:id="@+id/linearLayout8"
+                    android:layout_weight="1.5" />
             </LinearLayout>
-            <LinearLayout
-                android:orientation="vertical"
-                android:minWidth="25px"
-                android:minHeight="25px"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:id="@+id/linearLayout8"
-                android:layout_weight="1.5" />
         </LinearLayout>
-    </LinearLayout>
+    </RelativeLayout>
 </LinearLayout>
