--- a/Droid/Resources/layout/NearbyLayout.axml
+++ b/Droid/Resources/layout/NearbyLayout.axml
@@ -26,24 +26,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:id="@+id/relativeLayout1"
-                android:gravity="center_vertical"
-                android:background="@drawable/bar_top"
-                android:clipChildren="false">
+                android:gravity="center_vertical">
                 <ImageView
-                    android:src="@drawable/btn_back"
+                    android:src="@drawable/icon_back"
                     android:id="@+id/ActionBack"
-                    android:layout_width="50dp"
-                    android:layout_height="wrap_content"
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
                     android:layout_marginLeft="20dp" />
-                <TextView
-                    android:text="Drop Item"
-                    android:id="@+id/textView1"
-                    android:textColor="#ff000000"
-                    android:textSize="18dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="8dp" />
             </RelativeLayout>
             <LinearLayout
                 android:orientation="vertical"
